--- a/apps/meetie-service/package.json
+++ b/apps/meetie-service/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint",
+    "format": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
     "next": "14.2.5",
