--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 @next-swc-darwin-arm64-npm-14.2.5-30baab3764-10c0.zip filter=lfs diff=lfs merge=lfs -text
+@next-swc-win32-x64-msvc-npm-14.2.5-fd8931986f-10c0.zip filter=lfs diff=lfs merge=lfs -text
