--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "postcss": "^8",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1",
-    "typescript": "^4.9.5"
+    "typescript": "5.4.5"
   },
   "lint-staged": {
     "apps/**/*.{js,jsx,ts,tsx,css,scss}": [
