--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "moment": "^2.30.1",
     "next": "14.2.5",
     "next-themes": "^0.2.0",
     "react": "^18",
