--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@tanstack/react-query-devtools": "^5.52.3",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20",
     "@types/react": "^18",
