refactor: eslint error fix (#103)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
   "plugins": ["import"],
   "rules": {
     "@typescript-eslint/consistent-type-imports": "error",
+    "@typescript-eslint/no-unused-expressions": "off",
     "import/order": [
       "error",
       {
