--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,11 @@
             "position": "before"
           },
           {
+            "pattern": "{date-fns*,date-fns*/*}",
+            "group": "external",
+            "position": "before"
+          },
+          {
             "pattern": "{@radix-ui*,@radix-ui*/*}",
             "group": "external",
             "position": "before"
@@ -55,6 +60,11 @@
           {
             "pattern": "{@tanstack*,@tanstack*/*}",
             "group": "external",
+            "position": "before"
+          },
+          {
+            "pattern": "@/apis/**/*",
+            "group": "type",
             "position": "before"
           },
           {
