--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "@sentry/nextjs": "^8",
     "@sentry/utils": "^8.31.0",
+    "@sentry/webpack-plugin": "^2.22.4",
     "@supabase/ssr": "^0.5.0",
     "@supabase/supabase-js": "^2.45.1",
     "@tanstack/react-query": "^5.52.1",
