--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,7 @@ node_modules
 !.yarn/versions
 # Sentry Config File
 .env.sentry-build-plugin
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
