--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "e2e": "playwright test",
     "e2e:ui": "playwright test --ui",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "vitest"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.1",
@@ -51,12 +52,14 @@
     "@storybook/react": "^8.3.5",
     "@storybook/test": "^8.3.5",
     "@tanstack/react-query-devtools": "^5.52.3",
+    "@testing-library/react": "^16.0.1",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
+    "@vitejs/plugin-react": "^4.3.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -64,12 +67,15 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-storybook": "^0.9.0",
     "husky": "^9.1.4",
+    "jsdom": "^25.0.1",
     "lint-staged": "^15.2.7",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "storybook": "^8.3.5",
     "tailwindcss": "^3.4.1",
     "typescript": "5.4.5",
+    "vite": "^5.4.8",
+    "vitest": "^2.1.2",
     "webpack": "^5.95.0"
   },
   "lint-staged": {
