--- a/package.json
+++ b/package.json
@@ -52,11 +52,13 @@
     "@storybook/react": "^8.3.5",
     "@storybook/test": "^8.3.5",
     "@tanstack/react-query-devtools": "^5.52.3",
+    "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
     "@vitejs/plugin-react": "^4.3.2",
