--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -35,6 +35,13 @@ jobs:
       - name: Publish Summary
         run: echo -e "Result ${{ steps.chromatic.outputs.buildUrl }} Storybook Preview ${{ steps.chromatic.outputs.storybookUrl }}" >> $GITHUB_STEP_SUMMARY
 
+      - name: comment PR
+        uses: thollander/actions-comment-pull-request@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+        with:
+          message: "🚀storybook: ${{ steps.chromatic.outputs.storybookUrl }}"
+
       # - name: Get PR data
       #   uses: actions/github-script@v7
       #   id: get_pr_data
