--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -5,14 +5,6 @@ on:
     branches:
       - develop
 
-# permissions:
-#   contents: write
-#   pages: write
-#   deployments: write
-#   id-token: write
-#   issues: write
-#   pull-requests: write
-
 jobs:
   chromatic-deployment:
     name: Chromatic
@@ -58,5 +50,6 @@ jobs:
           comment-tag: ${{ github.event.number }}-storybook
           message: |
 
-            💄 Storybook: ${{ needs.chromatic-deployment.outputs.storybook_url }}
-            🕖 Update: ${{ needs.chromatic-deployment.outputs.currnent_time }}
+            🧷 Storybook: ${{ needs.chromatic-deployment.outputs.storybook_url }}
+
+            ⏰ Update: ${{ needs.chromatic-deployment.outputs.currnent_time }}
